--- a/examples/jsmpeg/jsmpeg.html
+++ b/examples/jsmpeg/jsmpeg.html
@@ -33,7 +33,7 @@
 	<script type="text/javascript" src="jsmpg.js"></script>
 	<script type="text/javascript">
 		// Setup the WebSocket connection and start the player
-		var client = new WebSocket( 'ws://10.0.0.119:44762' );
+		var client = new WebSocket( 'ws://101.93.128.171:5000/videoMain' );
 		var canvas = document.getElementById('videoCanvas');
 		var player = new jsmpeg(client, {canvas:canvas});
 	</script>
